--- a/.github/workflows/terraform-workflow.yaml
+++ b/.github/workflows/terraform-workflow.yaml
@@ -88,6 +88,6 @@ jobs:
           aws-region: "us-east-1"        
 
       - name: Terraform Apply 
-        run: terraform apply -auto-approve 
+        run: terraform apply -auto-approve -reconfigure
       
 
