--- a/.github/workflows/terraform-workflow.yaml
+++ b/.github/workflows/terraform-workflow.yaml
@@ -49,7 +49,7 @@ jobs:
           aws-region: "us-east-1"
           
       - name: Terraform Init
-        run: terraform init -input=false
+        run: terraform init -input=false -reconfigure
 
       - name: Terraform Validate
         run: terraform validate
@@ -86,8 +86,11 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: "us-east-1"        
+          
+      - name: Terraform Init
+        run: terraform init -input=false -reconfigure          
 
       - name: Terraform Apply 
-        run: terraform apply -auto-approve -reconfigure
+        run: terraform apply -auto-approve 
       
 
